--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -59,7 +59,7 @@
         </div>
 
         <div>
-          <label class="form-label">Orignal Listing Image</label><br />
+          <label class="form-label">Original Listing Image</label><br />
           <img
             class="preview-img"
             src="<%= previewImageUrl %>"
@@ -71,7 +71,6 @@
           <label for="image" class="form-label">Upload new image</label>
           <input
             name="listing[image]"
-            value="<%= listing.image.url %>"
             type="file"
             class="form-control"
           />
